codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: tui/src/history_cell.rs
assertion_line: 1942
expression: rendered
---
<<<<<<< HEAD
• Ran
  └ first_token_is_long_enou
        gh_to_wrap
    second_token_is_also_lon
        g_enough_to_wrap
=======
• Ran first_token_is_long_en
  │ ough_to_wrap
  │ second_token_is_also_lon
  │ … +1 lines
  └ (no output)
>>>>>>> upstream/main
